Fix users going to the page instead of collapsing the section

--- a/packages/react-components/MenuItem/index.module.css
+++ b/packages/react-components/MenuItem/index.module.css
@@ -1,3 +1,7 @@
+.menuContainer {
+  position: relative;
+}
+
 .root {
   display: flex;
   height: 3rem;
@@ -16,4 +20,6 @@
   cursor: pointer;
   position: absolute;
   right: 5px;
+  top: 50%;
+  transform: translateY(-50%);
 }
